examples/test/testpolicy8988.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8988
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key37: value22
      key11: value2
      key49: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value37
          key2: value0
          key24: value12
      podSelector:
        matchLabels:
          key2: value41
          key30: value31
